Studio Plietsch -> LEISKA   in  _data/settings.yaml  (wird wo gebraucht?)

--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -1,10 +1,10 @@
-company-title: STUDIO Plietsch
-description: Büro für Innenarchitektur
+company-title: HEINER LEISKA Photography
+description: ""
 address:
-  city: Hamburg
-  post-code: '20144'
-  street: Schlankreye 38
-phone: 040 319 77 919
-email: info@studioplietsch.de
-web: www.studioplietsch.de
-tax-number: 42/275/04051
+  city: Seestermühe
+  post-code: '25371'
+  street: Stiegstück 9  Teehaus
+phone: +49 176 31491402
+email: mail@leiska.de
+web: www.leiska.de
+tax-number: DE118789237
