Ein paar Daten ergänzt

--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -8,3 +8,5 @@ phone: +49 176 31491402
 email: mail@leiska.de
 web: www.leiska.de
 tax-number: DE118789237
+
+edition-DINA3: 29,7 cm x 42,0 cm &nbsp;&nbsp; (24,9 cm x 33,2 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>'
