Variable vorbereitet - wie aufrufen?

--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -1,1 +1,1 @@
-test-a: "Edition XYZ"
+A3test: "42,0 cm x 29,7 cm &nbsp;&nbsp; (31,1 cm x 24,9 cm) &nbsp;&nbsp;</br> Edition of 120 + 6 AP </br></br>"
