--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -1,1 +1,1 @@
-small: "Print Width: 42,0 cm, Height: 29,7 cm </br> Image Width: 31,1 cm, Height 24,9 cm </br> Edition: 120 + 6 AP </br></br>"
+small: "Print Width: 42,0 cm, Height: 29,7 cm </br> Image Width: 31,1 cm, Height 24,9 cm </br> Edition: 120 + 6 AP"
