--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -1,3 +1,3 @@
-4zu3_small: "Print: 42,0 cm x 29,7 cm </br> Image: 33,2 cm x 24,9 cm </br> Edition: 120 + 6 AP </br></br>"
-4zu3_medium: "Print: 100 cm x 77 cm </br> Image: 90 cm x 67 cm </br> Edition: 6 + 2 AP </br></br>"
-4zu3_large: "Print: 130 cm x 100 cm </br> Image: 120 cm x 90 cm </br> Edition: 6 + 2 AP </br></br>"
+4zu3_small: "Print: 42,0 cm x 29,7 cm </br> Image: 33,2 cm x 24,9 cm </br> Edition: 120 + 6 AP"
+4zu3_medium: "Print: 100 cm x 77 cm </br> Image: 80 cm x 60 cm </br> Edition: 6 + 2 AP"
+4zu3_large: "Print: 130 cm x 100 cm </br> Image: 120 cm x 90 cm </br> Edition: 6 + 2 AP"
