Ein paar Daten ergänzt

--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -2,6 +2,10 @@
 4zu3_medium: "Print: 90 cm x 70 cm </br> Image: 80 cm x 60 cm </br> Edition: 6 + 2 AP"
 4zu3_large: "Print: 140 cm x 110 cm </br> Image: 120 cm x 90 cm </br> Edition: 6 + 2 AP"
 
+4zu5_small: "Print: 29,7 cm x 42,0 cm </br> Image: 24,9 cm x 31,1 cm </br> Edition: 60 + 3 AP"
+4zu5_medium: "Print: 70 cm x 85 cm </br> Image: 60 cm x 75 cm </br> Edition: 6 + 2 AP"
+4zu5_large: "Print: 110 cm x 132,5 cm </br> Image: 90 cm x 112,5 cm </br> Edition: 6 + 2 AP"
+
 3zu4_small: "Print: 29,7 cm x 42,0 cm </br> Image: 24,9 cm x 33,2 cm </br> Edition: 60 + 3 AP"
 3zu4_medium: "Print: 70 cm x 90 cm </br> Image: 60 cm x 80 cm </br> Edition: 6 + 2 AP"
 3zu4_large: "Print: 110 cm x 140 cm </br> Image: 90 cm x 120 cm </br> Edition: 6 + 2 AP"
