Noch'n paar Daten ergänzt

--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -13,3 +13,7 @@
 3zu2_small: "Print: 42,0 cm x 29,7 cm </br> Image: 37,2 cm x 24,9 cm </br> Edition: 60 + 3 AP"
 3zu2_medium: "Print: 100 cm x 70 cm </br> Image: 90 cm x 60 cm </br> Edition: 6 + 2 AP"
 3zu2_large: "Print: 140 cm x 100 cm </br> Image: 120 cm x 80 cm </br> Edition: 6 + 2 AP"
+
+2zu3_small: "Print: 29,7 cm x 42,0 cm </br> Image: 24,9 cm x 37,2 cm </br> Edition: 60 + 3 AP"
+2zu3_medium: "Print: 70 cm x 100 cm </br> Image: 60 cm x 90 cm </br> Edition: 6 + 2 AP"
+2zu3_large: "Print: 100 cm x 140 cm </br> Image: 80 cm x 120 cm </br> Edition: 6 + 2 AP"
