--- a/_data/variables.yaml
+++ b/_data/variables.yaml
@@ -17,3 +17,7 @@
 2zu3_small: "Print: 29,7 cm x 42,0 cm </br> Image: 24,9 cm x 37,2 cm </br> Edition: 60 + 3 AP"
 2zu3_medium: "Print: 70 cm x 100 cm </br> Image: 60 cm x 90 cm </br> Edition: 6 + 2 AP"
 2zu3_large: "Print: 100 cm x 140 cm </br> Image: 80 cm x 120 cm </br> Edition: 6 + 2 AP"
+
+1zu1_small: "Print: 29,7 cm x 42,0 cm </br> Image: 24,9 cm x 24,9 cm </br> Edition: 60 + 3 AP"
+1zu1_medium: "Print: 70 cm x 70 cm </br> Image: 60 cm x 60 cm </br> Edition: 6 + 2 AP"
+1zu1_large: "Print: 110 cm x 110 cm </br> Image: 90 cm x 90 cm </br> Edition: 6 + 2 AP"
