--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -1,5 +1,6 @@
 company-title: HEINER LEISKA Photography
 description: ""
+name: Dipl.Ing. Heiner Leiska 
 address:
   city: Seestermühe
   post-code: '25371'
@@ -8,3 +9,4 @@ phone: +49 176 31491402
 email: mail@leiska.de
 web: www.leiska.de
 tax-number: DE118789237
+design: Moritz Kitzmann + Heiner Leiska  
