--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,9 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: HEINER LEISKA | Photography
 email: mail@leiska.de
 description: >- # this means to ignore newlines until "baseurl:"
   Less images!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://leika.de
+url: "http://leiska.de" # the base hostname & protocol for your site, e.g. http://leika.de
 
 # Build settings
 markdown: kramdown
@@ -29,27 +14,34 @@ collections:
     title: Books
     output: true
     permalink: /:collection/:title/
+    sorty_by: position
   architecture:
     title: Architecture
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
   horizon:
     title: Horizon
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
   ship:
     title: Ship
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
   model:
     title: Model
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
   sand:
     title: Sand
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
   cake:
     title: Cake
     output: true
     permalink: /photography/:collection/:title/
+    sorty_by: position
