--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,12 +44,12 @@ collections:
     label: "Architecture" 
     folder: "collections/_architecture" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -58,12 +58,12 @@ collections:
     label: "Cake" 
     folder: "collections/_cake" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -72,12 +72,12 @@ collections:
     label: "Horizon" 
     folder: "collections/_horizon" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -86,12 +86,12 @@ collections:
     label: "Model" 
     folder: "collections/_model" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -100,12 +100,12 @@ collections:
     label: "Sand" 
     folder: "collections/_sand" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -114,12 +114,12 @@ collections:
     label: "Ship" 
     folder: "collections/_ship" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "project-detail"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
-      - {label: "Position", name: "position", widget: "number"}
+      - {label: "Position", name: "date", widget: "date"}
       - {label: "Photo", name: "image", widget: "image"}
       - {label: "Year", name: "year", widget: "string"}
       - {label: "Archive ID", name: "archive_id", widget: "string", required: false}
@@ -128,7 +128,7 @@ collections:
     label: "Books" 
     folder: "collections/_books" 
     create: true 
-    slug: "{{position}}-{{fields.slug}}"
+    slug: "{{fields.slug}}"
     fields: 
       - {label: "Layout", name: "layout", widget: "hidden", default: "book-detail"}
       - {label: "Title", name: "title", widget: "string"}
