--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "ncu": "^0.2.1",
     "netlify-cli": "^2.40.0",
     "netlify-cms": "^2.10.35"
   },
