--- a/admin/config.yml
+++ b/admin/config.yml
@@ -156,6 +156,7 @@ collections:
     label: "News"
     folder: "collections/_news"
     create: true
+    slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string"}
       - { label: "Date", name: "date", widget: "date"}
