--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -1,10 +1,10 @@
-company-title: HEINER LEISKA Photography
+company-title: Heiner LEISKA Photography
 description: ""
 name: Dipl.Ing. Heiner Leiska 
 address:
   city: Seestermühe
   post-code: '25371'
-  street: Stiegstück 9  Teehaus
+  street: Stiegstück 11  Teehaus
 phone: +49 176 31491402
 email: mail@leiska.de
 web: www.leiska.de
