--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Less images!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.leiska.de" # the base hostname & protocol for your site, e.g. http://leika.de
-
+plugins:
+  - jekyll-postcss
+  -
 # Build settings
 markdown: kramdown
 
