--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "netlify-cli": "^2.40.0",
     "netlify-cms": "^2.10.35"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.4.1",
+    "autoprefixer": "^10.3.7",
+    "cssnano": "^5.0.8",
+    "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^2.2.17"
+  },
   "scripts": {
     "test": "test"
   },
