--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "ncu": "^0.2.1",
-    "netlify-cli": "^2.40.0",
-    "netlify-cms": "^2.10.35"
+    "netlify-cli": "^2.71.0",
+    "netlify-cms": "^2.10.174"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.3.7",
-    "cssnano": "^5.0.8",
-    "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.17"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "test"
   },
