--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,23 +12,14 @@ collections:
         label: "Home"
         file: "index.md"
         fields:
-          - {label: "Layout", name: "layout", widget: "hidden", default: "home"}
-          - {label: "Image", name: "image", widget: "image"}
-          - {label: "Alternative Text", name: "alt", widget: "string"}
-          - label: "Text"
-            name: "text"
-            widget: "object"
-            fields:
-              - {label: "Top", name: "top", widget: "string"}
-              - {label: "Bottom", name: "bottom", widget: "string"}
+          - { label: "Layout", name: "layout", widget: "hidden", default: "home"}
+          - { label: 'Text', name: 'body', widget: 'markdown' }
       - name: "about"
         label: "About"
         file: "about/index.md"
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "about"}
-          - {label: "Image", name: "image", widget: "image"}
-          - { label: 'Vita', name: 'vita', widget: 'markdown' }
-          - { label: 'About', name: 'text', widget: 'markdown' }
+- { label: 'Text', name: 'body', widget: 'markdown' }
   - name: "projects"
     label: "Projects"
     folder: "collections/_projects"
