--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,7 +26,7 @@ collections:
     create: true
     fields:
       - { label: "Layout", name: "layout", widget: "hidden", default: "project" }
-      - { label: "Series", name: "series", widget: "string" }
+      - { label: "Series", name: "title", widget: "string" }
       - label: 'Images'
         name: 'images'
         widget: 'list'
