--- a/_data/settings.yaml
+++ b/_data/settings.yaml
@@ -2,9 +2,9 @@ company-title: Heiner LEISKA Photography
 description: ""
 name: Dipl.Ing. Heiner Leiska 
 address:
-  city: Seestermühe
-  post-code: '25371'
-  street: Stiegstück 11   Teehaus
+  city: Wedel
+  post-code: '22880'
+  street: Goethestraße 31b
 phone: +49 176 31491402
 email: mail@leiska.de
 web: www.leiska.de
